Refactor & Switch DbContext
