# OpenApi/openapi.json
@@ -6,18 +6,18 @@
     "version": "1.0.0"
   },
   "paths": {
-    "/api/v1/Auth/login": {
+    "/api/v1/Accounts/register": {
       "post": {
         "tags": [
-          "Auth"
+          "Accounts"
         ],
-        "operationId": "Auth_Login",
+        "operationId": "Accounts_RegisterUser",
         "requestBody": {
-          "x-name": "auth",
+          "x-name": "userForRegistration",
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/AuthenticateRequest"
+                "$ref": "#/components/schemas/UserForRegistrationDto"
               }
             }
           },
@@ -39,23 +39,24 @@
         }
       }
     },
-    "/api/v1/Auth/logout": {
+    "/api/v1/Accounts/login": {
       "post": {
         "tags": [
-          "Auth"
+          "Accounts"
         ],
-        "operationId": "Auth_Logout",
-        "parameters": [
-          {
-            "name": "returnUrl",
-            "in": "query",
-            "schema": {
-              "type": "string",
-              "nullable": true
-            },
-            "x-position": 1
-          }
-        ],
+        "operationId": "Accounts_Login",
+        "requestBody": {
+          "x-name": "userForAuthentication",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserForAuthenticationDto"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
         "responses": {
           "200": {
             "description": "",
@@ -113,49 +114,12 @@
         }
       }
     },
-    "/api/v1/Users": {
+    "/api/v1/Products": {
       "get": {
         "tags": [
-          "Users"
+          "Products"
         ],
-        "operationId": "Users_GetUserByQuery",
-        "parameters": [
-          {
-            "name": "name",
-            "in": "query",
-            "schema": {
-              "type": "string",
-              "nullable": true
-            },
-            "x-position": 1
-          },
-          {
-            "name": "email",
-            "in": "query",
-            "schema": {
-              "type": "string",
-              "nullable": true
-            },
-            "x-position": 2
-          },
-          {
-            "name": "role",
-            "in": "query",
-            "schema": {
-              "oneOf": [
-                {
-                  "nullable": true,
-                  "oneOf": [
-                    {
-                      "$ref": "#/components/schemas/RoleType"
-                    }
-                  ]
-                }
-              ]
-            },
-            "x-position": 3
-          }
-        ],
+        "operationId": "Products_Get",
         "responses": {
           "200": {
             "description": "",
@@ -164,48 +128,8 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/UserDTO"
+                    "$ref": "#/components/schemas/Product"
                   }
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "operationId": "Users_PostUser",
-        "requestBody": {
-          "x-name": "user",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/User"
-              }
-            }
-          },
-          "required": true,
-          "x-position": 1
-        },
-        "responses": {
-          "201": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserDTO"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
                 }
               }
             }
@@ -213,127 +137,32 @@
         }
       }
     },
-    "/api/v1/Users/{id}": {
-      "get": {
+    "/api/v1/Token/refresh": {
+      "post": {
         "tags": [
-          "Users"
+          "Token"
         ],
-        "operationId": "Users_GetUserById",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            },
-            "x-position": 1
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserDTO"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Users"
-        ],
-        "operationId": "Users_DeleteUser",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            },
-            "x-position": 1
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": ""
-          },
-          "404": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          }
-        }
-      },
-      "patch": {
-        "tags": [
-          "Users"
-        ],
-        "operationId": "Users_PatchUser",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            },
-            "x-position": 1
-          }
-        ],
+        "operationId": "Token_Refresh",
         "requestBody": {
-          "x-name": "updUser",
+          "x-name": "tokenDto",
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/User"
+                "$ref": "#/components/schemas/RefreshTokenDto"
               }
             }
           },
           "required": true,
-          "x-position": 2
+          "x-position": 1
         },
         "responses": {
           "200": {
             "description": "",
             "content": {
-              "application/json": {
+              "application/octet-stream": {
                 "schema": {
-                  "type": "integer",
-                  "format": "int32"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
+                  "type": "string",
+                  "format": "binary"
                 }
               }
             }
@@ -367,142 +196,84 @@
   },
   "components": {
     "schemas": {
-      "AuthenticateRequest": {
+      "UserForRegistrationDto": {
         "type": "object",
         "additionalProperties": false,
-        "properties": {
-          "email": {
-            "type": "string"
-          },
-          "plainPassword": {
-            "type": "string"
-          }
-        }
-      },
-      "UserDTO": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "name": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "role": {
-            "$ref": "#/components/schemas/RoleType"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "updatedAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "isDel": {
-            "type": "boolean"
-          }
-        }
-      },
-      "RoleType": {
-        "type": "integer",
-        "description": "",
-        "x-enumNames": [
-          "Admin",
-          "User",
-          "Guest"
+        "required": [
+          "email",
+          "password"
         ],
-        "enum": [
-          0,
-          1,
-          2
-        ]
-      },
-      "ProblemDetails": {
-        "type": "object",
-        "additionalProperties": {
-          "nullable": true
-        },
         "properties": {
-          "type": {
+          "email": {
             "type": "string",
-            "nullable": true
+            "minLength": 1
           },
-          "title": {
+          "password": {
             "type": "string",
-            "nullable": true
+            "minLength": 1
           },
-          "status": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "detail": {
-            "type": "string",
-            "nullable": true
-          },
-          "instance": {
-            "type": "string",
-            "nullable": true
+          "confirmPassword": {
+            "type": "string"
           }
         }
       },
-      "User": {
+      "UserForAuthenticationDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "email",
+          "password"
+        ],
+        "properties": {
+          "email": {
+            "type": "string",
+            "minLength": 1
+          },
+          "password": {
+            "type": "string",
+            "minLength": 1
+          }
+        }
+      },
+      "Product": {
         "type": "object",
         "additionalProperties": false,
         "required": [
           "name",
-          "email",
-          "plainPassword",
-          "role",
-          "createdAt",
-          "updatedAt",
-          "isDel"
+          "supplier"
         ],
         "properties": {
           "id": {
-            "type": "integer",
-            "format": "int32"
+            "type": "string",
+            "format": "guid"
           },
           "name": {
             "type": "string",
-            "maxLength": 100,
-            "minLength": 0
+            "minLength": 1
           },
-          "email": {
+          "supplier": {
             "type": "string",
-            "format": "email",
-            "maxLength": 100,
-            "minLength": 0
+            "minLength": 1
           },
-          "plainPassword": {
-            "type": "string",
-            "maxLength": 100,
-            "minLength": 8
+          "price": {
+            "type": "number",
+            "format": "double",
+            "minimum": 1.0
           },
-          "hashedPassword": {
+          "imageUrl": {
+            "type": "string"
+          }
+        }
+      },
+      "RefreshTokenDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "token": {
             "type": "string"
           },
-          "role": {
-            "$ref": "#/components/schemas/RoleType"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time",
-            "minLength": 1
-          },
-          "updatedAt": {
-            "type": "string",
-            "format": "date-time",
-            "minLength": 1
-          },
-          "isDel": {
-            "type": "boolean"
+          "refreshToken": {
+            "type": "string"
           }
         }
       },
