# Server/Controllers/ProductsController.cs
@@ -1,12 +1,13 @@
 using HogeBlazor.Server.Helpers;
 using HogeBlazor.Server.Repository;
+using HogeBlazor.Shared.Models;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using Newtonsoft.Json;
 
 namespace HogeBlazor.Server.Controllers;
 
-[Route(Const.API_BASE_PATH_V1 + "[controller]")]
+[Route($"{Const.API_BASE_PATH_V1}[controller]")]
 [ApiController]
 [Authorize]
 public class ProductsController : ControllerBase
@@ -19,10 +20,12 @@ public class ProductsController : ControllerBase
     }
 
     [HttpGet]
-    public async Task<IActionResult> Get()
+    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(List<Product>))]
+    public async Task<ActionResult<List<Product>>> Get()
     {
         var products = await _repo.GetProducts();
-        Response.Headers.Add("X-Pagination", JsonConvert.SerializeObject(products.MetaData));
+        // var products = await _repo.GetProducts();
+        // Response.Headers.Add("X-Pagination", JsonConvert.SerializeObject(products.MetaData));
         return Ok(products);
     }
 }
