# Shared/Models/User2.cs
@@ -1,9 +1,0 @@
-using Microsoft.AspNetCore.Identity;
-
-namespace HogeBlazor.Shared.Models;
-
-public class User2 : IdentityUser
-{
-    public string RefreshToken { get; set; } = string.Empty;
-    public DateTime RefreshTokenExpiryTime { get; set; }
-}
